--- a/rqt_bag/resource/bag_widget.ui
+++ b/rqt_bag/resource/bag_widget.ui
@@ -20,6 +20,24 @@
    <property name="margin">
     <number>0</number>
    </property>
+   <!-- Modificado -->
+   <item>
+    <widget class="QPushButton" name="capture_button">
+     <property name="toolTip">
+      <string>Capture Image</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>16</width>
+       <height>16</height>
+      </size>
+     </property>
+    </widget>  
+   </item>
+   <!-- Termina modificacion -->
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
